<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/highlighted_text_material_dark"

    tools:context="com.example.lahad.dakartrafic.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Paramètres"
            android:id="@+id/textView6"
            android:textColor="@color/abc_search_url_text_pressed"
            android:textSize="17dp"
            android:background="@color/background_floating_material_light"
            android:layout_gravity="left" />

        <ImageView
            android:layout_width="203dp"
            android:layout_height="79dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:src="@drawable/logosdakar"
            android:id="@+id/imageView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/lbl_forgot_password"
            android:textColor="@color/abc_search_url_text_pressed"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/forgot_password_msg"
            android:textColor="@color/abc_search_url_text_pressed"
            android:textSize="14dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/abc_search_url_text_pressed"
                android:textColorHint="@color/abc_search_url_text_pressed" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login"
            android:text="@string/btn_reset_password"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/btn_login"
            android:text="@string/btn_back"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="15dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>
